<resources>
    <string name="app_name">Submission 2</string>

    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="fav">Favourite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="running_time">Running Time</string>
    <string name="original_language">Original Language</string>
    <string name="overview">Overview</string>
    <string name="error">An ERROR occured</string>
    <string name="del_fav">Deleted from Favourite</string>
    <string name="in_fav">Added to Favourite</string>
    <string name="title_favourites">Favourites</string>

</resources>