<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ln1"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="230dp"
                    android:id="@+id/poster"
                    android:layout_marginRight="10dp"
                    tools:src="@drawable/poster_alita"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        android:text="@string/title"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:id="@+id/titleDetail" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        android:layout_marginTop="10dp"
                        android:text="@string/genre"/>

                    <TextView
                        android:id="@+id/genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        android:layout_marginTop="10dp"
                        android:text="@string/running_time"/>

                    <TextView
                        android:id="@+id/running_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        android:layout_marginTop="10dp"
                        android:text="@string/original_language"/>

                    <TextView
                        android:id="@+id/original_lang"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="#000000" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln2"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:textSize="20dp"
                    android:text="@string/overview"/>

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:visibility="gone"
        android:id="@+id/progressBar"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:src="@drawable/ic_favorite_border_black_24dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="16dip"/>

</RelativeLayout>